package config;

message CommConf {
	optional string router_conf_file = 1;
}
